--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header class="main-header">
         <div class="logo">
-            <img src="images/logo.png" alt="Reggies Makeover Logo" class="logo-img">
+            <img src="logo.png" alt="Reggies Makeover Logo" class="logo-img">
             <span>REGGIES MAKEOVER</span>
         </div>
     </header>
@@ -34,3 +34,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
