--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reggie's Makeover | Award-Winning Bridal Makeup Artist in Accra</title>
+    <link rel="icon" type="image" href="logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -107,10 +108,19 @@
                         </div>
                     </div>
                     <div class="mt-6 p-4 bg-gray-50 rounded-lg border border-gray-200">
-                        <h4 class="font-semibold text-lg mb-2 text-gray-700"></h4>
-                        <p class="text-sm text-gray-600 mb-2"></p>
-                       
-                        <p class="text-xs text-gray-500 mt-2"></p>
+                        <h4 class="font-semibold text-lg mb-2 text-gray-700">📁 How to Add Your Images:</h4>
+                        <p class="text-sm text-gray-600 mb-2">Place your JPEG images in the same folder as this HTML file and name them:</p>
+                        <ul class="text-sm text-gray-600 list-disc pl-5 space-y-1">
+                            <li><code>reggie1.jpeg</code> - Main portrait</li>
+                            <li><code>reggie2.jpeg</code> - At work photo</li>
+                            <li><code>reggie3.jpeg</code> - Professional shot</li>
+                            <li><code>reggie4.jpeg</code> - With client</li>
+                            <li><code>reggie5.jpeg</code> - Studio photo</li>
+                            <li><code>reggie6.jpeg</code> - Makeup artistry</li>
+                            <li><code>reggie7.jpeg</code> - Portfolio shot</li>
+                            <li><code>reggie8.jpeg</code> - Award-winning work</li>
+                        </ul>
+                        <p class="text-xs text-gray-500 mt-2">Or edit the image sources above to match your actual JPEG file names.</p>
                     </div>
                 </div>
                 <div>
