--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 
                 <div class="stat-card p-6 rounded-lg">
-                    <div class="text-4xl md:text-5xl font-bold text-gold mb-2">2,500+</div>
+                    <div class="text-4xl md:text-5xl font-bold text-gold mb-2">2.5k+</div>
                     <div class="text-sm md:text-base text-gray-300">Brides Served</div>
                 </div>
                 
@@ -416,3 +416,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
