--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
                     <div class="text-sm md:text-base text-gray-300">Years Experience</div>
                 </div>
                 
-                <div class="stat-card p-6 rounded-lg">
-                    <div class="text-3xl md:text-5xl font-bold text-gold mb-2">2.5k+</div>
-                    <div class="text-sm md:text-base text-gray-300">Brides Served</div>
-                </div>
+                <div class="stat-card p-7 md:p-9 rounded-lg">
+    <div class="text-3xl md:text-5xl font-bold text-gold mb-2">2.5k+</div>
+    <div class="text-xs md:text-base text-gray-300">Brides<br class="md:hidden"> Served</div>
+</div>
                 
                 <div class="stat-card p-6 rounded-lg">
                     <div class="text-4xl md:text-5xl font-bold text-gold mb-2">#1</div>
@@ -416,5 +416,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
